// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media between renders the styles inside a between md and lg media query 1`] = `
Object {
  "@media (min-width: 48em and (max-width: 62em": Object {
    "key": "value",
  },
}
`;

exports[`media between renders the styles without a media query 1`] = `
Object {
  "key": "value",
}
`;

exports[`media between renders the styles without a media query 2`] = `
Object {
  "key": "value",
}
`;

exports[`media between renders the styles without a media query 3`] = `
Object {
  "key": "value",
}
`;

exports[`media flattenMax renders the renders width 0.5em inside a max xl media query 1`] = `
Object {
  "@media (max-width: 75em)": Object {
    "width": "5em",
  },
}
`;

exports[`media flattenMax renders the renders width 0.5em without a media query 1`] = `
Object {
  "width": "0.5em",
}
`;

exports[`media flattenMin renders the renders width 0.5em inside a min xs media query 1`] = `
Object {
  "@media (min-width: 0)": Object {
    "width": "0.5em",
  },
}
`;

exports[`media flattenMin renders the renders width 0.5em without a media query 1`] = `
Object {
  "width": "0.5em",
}
`;

exports[`media max renders the styles inside a max md media query 1`] = `
Object {
  "@media (max-width: 48em)": Object {
    "key": "value",
  },
}
`;

exports[`media max renders the styles without a media query 1`] = `
Object {
  "key": "value",
}
`;

exports[`media min renders the styles inside a min md media query 1`] = `
Object {
  "@media (min-width: 48em)": Object {
    "key": "value",
  },
}
`;

exports[`media min renders the styles without a media query 1`] = `
Object {
  "key": "value",
}
`;

exports[`media min renders the styles without a media query 2`] = `
Object {
  "key": "value",
}
`;
